--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 100%;
+  overflow-x: hidden;
   display: flex;
+  gap: 40px;
+  height: 100ch;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+button {
+  height: 45px;
+  border-radius: 8px;
+  border: none;
+  color: rgb(15, 15, 15);
+  background-color: #e5e4e2;
+  font-size: 18px;
+  width: 200px;
+  max-width: 200px;
+  letter-spacing: 0.5px;
+  cursor: pointer;
+  text-size-adjust: initial;
 }
 
-.App-link {
-  color: #61dafb;
+button:hover {
+  color: #bb0e0e;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.IconContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100px;
+  height: 50px;
 }
