--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
 .App {
   width: 100%;
-  overflow-x: hidden;
   display: flex;
   gap: 40px;
-  height: 100ch;
+  height: 100vh;
   flex-direction: column;
   align-items: center;
   justify-content: center;
